Image vertical alignment fixed

--- a/src/css/partials/generic.scss
+++ b/src/css/partials/generic.scss
@@ -18,6 +18,7 @@
   img {
     max-height: 32px;
     width: unset;
+    vertical-align: text-top;
   }
   .site-title {
     padding-left: 20px;
